Added footer to all pages

--- a/next.html
+++ b/next.html
@@ -42,6 +42,6 @@
 <p>One of the best online resources for web designers and developers. Great collection of articles, tutorials, and references.</p>
 <p><b>HTML5 Rocks </b></p>
 <p>Once you&rsquo;ve got the basics down, check out sites like HTML5 Rocks. This site feature articles, tutorials, and other resources that help you keep up with the evolving web. </p>
-
+<p><a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
 </body>
 </html>
