--- a/reference.html
+++ b/reference.html
@@ -157,6 +157,7 @@
     <td><b>&amp;mdash;</b></td>
   </tr>
 </table>
-<p><a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
+<footer role="contentinfo">
+  <p><a href="http://www.csun.edu" title="csun.edu" target="_blank">CSUN</a> 18111 Nordhoff St Northridge, CA 91330</p>
 </body>
 </html>
